Actions
Bug #10807
closedloader fails to boot Dell R510 in UEFI mode
Start date:
2019-04-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Updated by John Levon about 3 years ago
SmartOS OS-7625
On a Dell R510 in EFIBoot, we see:
Loading /os/20190122T132623Z/platform/i86pc/kernel/amd64/unix... Loading /os/20190122T132623Z/platform/i86pc/amd64/boot_archive... Loading /os/20190122T132623Z/platform/i86pc/amd64/boot_archive.hash... Loading /kernel/drv/dtrace.conf... Loading /etc/system... Booting... panic: Could not find memory for relocater --> Press a key on the console to reboot <-- Rebooting...
because of
ok memmap Type Physical Virtual #Pages Attr BootServicesData 000000010000 000000000000 00000090 UC WC WT WB BootServicesData 000000100000 000000000000 00003f00 UC WC WT WB ConventionalMemory 000004000000 000000000000 0008ebc3 UC WC WT WB
Instead, we'll just allocate the relocator pages from loader's heap, as this seems a lot less
likely to intersect the kernel load region.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 287d025085c7f7e5ab020c58140c29782754e38f
commit 287d025085c7f7e5ab020c58140c29782754e38f Author: John Levon <john.levon@joyent.com> Date: 2019-04-30T08:57:42.000Z 10807 loader fails to boot Dell R510 in UEFI mode Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions